# dungeonmaster_data

./: .gitignore  README.md  fetch_data  pyproject.toml
dungeonmaster_data/: character_sheet_json_adapter.py  json_manager.py  json_validator.py
schema/: character_sheet_schema_notes.md
schema/definitions/: npc_character_summary.json
tests/: test_character_sheet_json_adapter.py  test_json_manager.py  test_json_validator.py
tests/fixtures/: incremental_character_sheet.json  invalid_character_sheet.json  malformed_character_sheet.json  malformed_schema.json  simplest_character_sheet.json  simplified_character_sheet_schema.json  test_character_sheet_schema.json  valid_character_sheet.json
